[package]
name = "big_number"
version = "0.1.0"
edition = "2021"
authors = ["Jesus Flores <me@jesusfloressanjose.com>"]
description = "A scientific notation number type for idle/incremental games."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sh4ka/big_number"
keywords = ["idle", "incremental", "scientific", "math", "big-number"]
categories = ["mathematics", "games"]
readme = "README.md"
documentation = "https://docs.rs/big_number"
homepage = "https://github.com/sh4ka/big_number"
exclude = [
    ".github"
]

[dependencies]
